--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -1,5 +1,6 @@
 html {
-  font-family: sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -224,7 +225,7 @@ textarea {
 }
 
 html {
-  font: 112.5%/1.45em georgia, serif;
+  font: 112.5%/1.45em;
   box-sizing: border-box;
   overflow-y: scroll;
 }
@@ -243,7 +244,6 @@ html {
 
 body {
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -264,9 +264,7 @@ img {
 
 h1 {
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-weight: 700;
+  font-weight: 500;
   text-rendering: optimizeLegibility;
   text-transform: uppercase;
   line-height: 1.1;
@@ -294,6 +292,11 @@ h5 {
 
 h6 {
   font-size: 0.78405rem;
+}
+
+p {
+  line-height: 1.5;
+  font-weight: 300;
 }
 
 ul, ol, dl, dd {
