feat: new color variables base and fixed navbar

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -2,7 +2,7 @@ section {
   width: 100vw;
   height: 100vh;
 
-  background: var(--color-primary);
+  background: linear-gradient(170deg, var(--color-primary), var(--color-secondary));
   color: white;
 
   div.container {
