--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,24 +1,17 @@
 :root {
-  --color-primary: #221f39;
-  --color-primary-rgb: 34,31,57;
+  --color-primary: #2d294c;
+  --color-primary-rgb: 45,41,76;
   --color-primary-contrast: #ffffff;
   --color-primary-contrast-rgb: 255,255,255;
-  --color-primary-shade: #1e1b32;
-  --color-primary-tint: #38354d;
+  --color-primary-shade: #282443;
+  --color-primary-tint: #423e5e;
 
-  --color-secondary: #2d294c;
-  --color-secondary-rgb: 45,41,76;
-  --color-secondary-contrast: #ffffff;
-  --color-secondary-contrast-rgb: 255,255,255;
-  --color-secondary-shade: #282443;
-  --color-secondary-tint: #423e5e;
-
-  --color-tertiary: #575470;
-  --color-tertiary-rgb: 87,84,112;
-  --color-tertiary-contrast: #ffffff;
-  --color-tertiary-contrast-rgb: 255,255,255;
-  --color-tertiary-shade: #4d4a63;
-  --color-tertiary-tint: #68657e;
+  --color-secondary: #81A8C7;
+  --color-secondary-rgb: 129,168,199;
+  --color-secondary-contrast: #000000;
+  --color-secondary-contrast-rgb: 0,0,0;
+  --color-secondary-shade: #7294af;
+  --color-secondary-tint: #8eb1cd;
 
   --color-highlight: #ff65a9;
   --color-highlight-rgb: 255,101,169;
