--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -17,6 +17,7 @@ section.header {
     h1 {
       font-size: 2.75rem;
       line-height: 2.75rem;
+      text-align: center;
 
       @media (min-width: 992px) {
         font-size: 4rem;
