--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -14,6 +14,8 @@ section.header {
 
     height: 100%;
 
+    padding-top: 1.75rem;
+
     h1 {
       font-size: 2.75rem;
       line-height: 2.75rem;
