--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,7 +5,7 @@ section.header {
   background: linear-gradient(170deg, var(--color-primary), var(--color-secondary));
   color: white;
 
-  div.container {
+  main {
     display: flex;
     flex-direction: column;
 
