--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -18,7 +18,7 @@ section.navigation {
     color: #ffffff;
   }
 
-  a.main {
+  a.home {
     display: flex;
     justify-content: flex-start;
     align-items: center;
