--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -93,9 +93,9 @@ section.portfolio {
 
         h2 {
           top: 50%;
-          margin: 0;
           width: calc(100% - 1.45rem);
           text-align: center;
+          padding-bottom: 0.45rem;
         }
 
         p {
