feat: add blog page

--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -2,9 +2,8 @@ a.post {
   text-decoration: none;
   color: inherit;
 
-  &:hover {
+  &:hover, &:active {
     text-decoration: none;
-    color: var(--color-highlight);
 
     article {
       div.image {
