--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -102,7 +102,7 @@ section.portfolio {
         }
       }
 
-      &:hover {
+      &:hover, &:active {
         > div.details {
           visibility: visible;
           opacity: 1;
