--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -4,6 +4,7 @@ a.post {
 
   &:hover, &:active {
     text-decoration: none;
+    color: var(--color-highlight);
 
     article {
       div.image {
