--- a/src/theme/blog.scss
+++ b/src/theme/blog.scss
@@ -3,3 +3,19 @@ section.blog {
     text-align: center;
   }
 }
+
+section.post {
+  padding: 6rem 0 4rem;
+
+  h1, h2, h3 {
+    margin: 2.75rem 0 1.75rem;
+  }
+
+  p.date {
+    margin: 0;
+  }
+
+  p.tags {
+    color: var(--color-highlight);
+  }
+}
