feat: add page for Our Energy

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -8,6 +8,17 @@ section.portfolio {
 
     margin: auto;
 
+    a {
+      color: inherit;
+      text-decoration: inherit;
+
+      &:hover,
+      &:active {
+        color: inherit;
+        text-decoration: inherit;
+      }
+    }
+
     article {
       justify-self: center;
       align-self: center;
