--- a/src/theme/project.scss
+++ b/src/theme/project.scss
@@ -1,6 +1,6 @@
 section.project {
 
-  article {
+  article.info {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-template-rows: auto;
@@ -64,6 +64,23 @@ section.project {
             }
           }
         }
+      }
+    }
+  }
+
+  h3 {
+    margin: 3.75rem 0 1.45rem;
+  }
+
+  article.factsheet {
+    text-align: center;
+
+    a {
+      text-decoration: none;
+
+      &:hover,
+      &:active {
+        text-decoration: none;
       }
     }
   }
