--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,9 +1,10 @@
 section.contact {
+  padding: 2rem 0 6rem;
+
   main {
     div.action {
       display: flex;
       justify-content: center;
-      padding: 1.25rem 0;
     }
   }
 }
