--- a/src/theme/project.scss
+++ b/src/theme/project.scss
@@ -74,6 +74,7 @@ section.project {
 
   article.factsheet {
     text-align: center;
+    padding: 0 0 1rem;
 
     a {
       text-decoration: none;
