--- a/src/theme/project.scss
+++ b/src/theme/project.scss
@@ -8,7 +8,7 @@ section.project {
 
     margin: 1.75rem 0;
 
-    div.screenshots, div.introduction {
+    div.introduction {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -16,55 +16,6 @@ section.project {
 
     div.introduction {
       flex-direction: column;
-    }
-
-    div.screenshots {
-      button {
-        border: 0;
-        outline: 0;
-        background: transparent;
-        cursor: pointer;
-        padding: 0 0.75rem;
-
-        &:hover,
-        &:active {
-          svg {
-            color: var(--color-highlight);
-          }
-        }
-      }
-    }
-
-    div.deck-container {
-      overflow: hidden;
-      display: inline-block;
-      position: relative;
-
-      width: 50%;
-      height: 20rem;
-
-      deckgo-deck {
-        --slide-padding-top: 0;
-        --slide-padding-start: 0;
-        --slide-padding-end: 0;
-        --slide-padding-bottom: 0;
-        --pager-display: none;
-
-        deckgo-slide-title {
-          div[slot="title"] {
-            width: var(--slide-width);
-            height: var(--slide-height);
-
-            div.gatsby-image-wrapper {
-              max-height: 100%;
-
-              img {
-                object-fit: contain !important;
-              }
-            }
-          }
-        }
-      }
     }
   }
 
