--- a/src/theme/input.scss
+++ b/src/theme/input.scss
@@ -11,6 +11,11 @@ input[type="text"], input[type="tel"], input[type="email"], textarea {
   &:focus {
     outline: none;
   }
+
+  &::placeholder {
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  }
 }
 
 input[type="submit"], a.button {
@@ -28,6 +33,7 @@ input[type="submit"], a.button * {
   font-size: 1.25rem;
   font-weight: 300;
   text-transform: uppercase;
+  border: 0;
 
   &:hover, &:active {
     background-color: var(--color-highlight);
