--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -13,6 +13,15 @@ section.about {
       color: white;
       padding: 2px;
       border-radius: 4px;
+
+      a {
+        text-decoration: none;
+
+        &:hover, &:active {
+          color: inherit;
+          text-decoration: underline;
+        }
+      }
     }
   }
 }
