--- a/src/theme/section.scss
+++ b/src/theme/section.scss
@@ -2,6 +2,10 @@ section.extraspace {
   padding: 6rem 0;
 }
 
+section.extraspace-bottom {
+  padding: 0 0 6rem;
+}
+
 section.extrabigspace {
   padding: 8rem 0 4rem;
 }
