feat: fluster is deprecated
Signed-off-by: peterpeterparker <david.dalbusco@outlook.com>

--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -7,6 +7,12 @@ section.portfolio, section.other-projects {
     grid-template-rows: auto;
     grid-gap: 1.75rem;
 
+    @media (min-width: 992px) {
+      &.preview {
+        width: calc(2 * 100% / 3);
+      }
+    }
+
     margin: auto;
 
     a {
