--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -114,7 +114,7 @@ section.portfolio, section.other-projects {
           background: #0cd1e8;
 
           &.summary, &.details {
-            color: white;
+            color: black;
           }
 
           &.details {
