--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -11,7 +11,7 @@ section.about {
     mark {
       background: var(--color-highlight);
       color: var(--color-primary);
-      padding: 2px 8px;
+      padding: 0 8px;
       border-radius: 16px;
 
       a {
