feat: a bit of fun with shadows
Signed-off-by: peterpeterparker <david.dalbusco@outlook.com>

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -25,6 +25,8 @@ div.menu {
   }
 
   a {
+    text-shadow: -1px 2px var(--color-secondary);
+
     pointer-events: all;
     text-decoration: none;
 
