--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -24,6 +24,9 @@ section.header {
       border-radius: 50%;
       margin: 0 0 2.25rem;
 
+      box-shadow: 1px 1px var(--color-primary);
+      border: 1px solid var(--color-primary);
+
       @media (max-height: 560px) {
         display: none;
       }
