feat: shadows in footer
Signed-off-by: peterpeterparker <david.dalbusco@outlook.com>

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -2,6 +2,10 @@ footer {
   text-align: center;
   color: #ffffff;
 
+  h2 {
+    text-shadow: 1px 1px var(--color-secondary);
+  }
+
   p, h3 {
     margin: 0;
     white-space: pre-wrap;
