--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -8,6 +8,7 @@ section.navigation {
     background-color: var(--color-primary);
     z-index: 3;
     color: #ffffff;
+    border-bottom: 3px solid var(--color-highlight);
 
     &.animated {
       transition: all .35s;
