style: easier to read
Signed-off-by: peterpeterparker <david.dalbusco@outlook.com>

--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -8,7 +8,7 @@ section.navigation {
     background-color: var(--color-primary);
     z-index: 3;
     color: #ffffff;
-    border-bottom: 3px solid var(--color-highlight);
+    border-bottom: 3px solid var(--color-secondary);
 
     &.animated {
       transition: all .35s;
