feat: display blog minutes to read
Signed-off-by: peterpeterparker <david.dalbusco@outlook.com>

--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -80,10 +80,8 @@ a.post {
 
       p {
         margin: 0;
-
-        &:last-of-type {
-          font-size: 1rem;
-        }
+        font-size: 1rem;
+        font-weight: 300;
       }
     }
   }
