--- a/src/theme/blog.scss
+++ b/src/theme/blog.scss
@@ -8,19 +8,20 @@ section.post {
   padding: 6rem 0 0;
 
   h1, h2, h3 {
-    margin: 2.75rem 0 1.75rem;
+    margin: 2.75rem 0 1.25rem;
   }
 
   h1, h2, h3 {
     text-shadow: 1px 1px var(--color-secondary);
   }
 
-  p.date {
-    margin: 0;
+  p.date, p.tags {
+    font-weight: 300;
+    font-size: 1rem;
   }
 
-  p.tags {
-    color: var(--color-highlight);
+  p.date {
+    margin: 0;
   }
 
   hr {
