--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,7 +2,10 @@ section.header {
   width: 100%;
   height: 100vh;
 
-  background: linear-gradient(0deg, var(--color-primary), var(--color-secondary));
+  background: linear-gradient(270deg, var(--color-highlight), var(--color-secondary), var(--color-primary));
+  background-size: 600% 600%;
+  animation: backgroundAnimation 20s ease-in-out infinite;
+
   color: white;
 
   main {
@@ -38,4 +41,10 @@ section.header {
       font-size: 1.5rem;
     }
   }
+}
+
+@keyframes backgroundAnimation {
+  0%{background-position:0 50%}
+  75%{background-position:100% 50%}
+  100%{background-position:0 50%}
 }
