feat: add rebel scan to showcase
Signed-off-by: peterpeterparker <david.dalbusco@outlook.com>

--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -126,6 +126,16 @@ section.portfolio, section.other-projects {
         }
       }
 
+      &.rebelscan {
+        > div {
+          background: linear-gradient(135deg, #00a5cf, #9fffcb);
+
+          &.details {
+            background: #af2bbf;
+          }
+        }
+      }
+
       &.wooof {
         > div {
           &.details {
