--- a/src/theme/blog.scss
+++ b/src/theme/blog.scss
@@ -29,7 +29,7 @@ section.post {
     margin: 1.75rem auto;
   }
 
-  img, iframe {
+  img {
     box-shadow: 1px 1px var(--color-primary);
     border: 1px solid var(--color-primary);
     border-radius: 0.5rem;
